--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/react-router": "^5.1.16",
     "antd": "^4.16.9",
     "bootstrap": "^5.0.2",
+    "i18next": "^20.4.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
+    "react-i18next": "^9.0.10",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
